//////////////////////////////////////////////////
// CORE PERSON & TENANCY STRUCTURE
//////////////////////////////////////////////////

Table tenant_person {
  tenant_id integer [pk, increment]
  full_name varchar(255) [not null]
  person_alert_code_id integer [ref: > person_alert_code.person_alert_code_id]
  date_of_birth date
  phone_number varchar(50)
  email varchar(255)
}

Table tenancy {
  tenancy_id integer [pk, increment]
  tenant_id integer [not null, ref: > tenant_person.tenant_id]
  address_id integer [not null]
  start_date date [not null]
  end_date date
  tenancy_type varchar(100) [not null]
  tenancy_status varchar(100) [not null]
 }

Table household_member_person {
  household_member_id integer [pk, increment]
  tenant_id integer [not null, ref: > tenant_person.tenant_id]
  tenancy_id integer [not null, ref: > tenancy.tenancy_id]
  person_alert_code_id integer [ref: > person_alert_code.person_alert_code_id]
  full_name varchar(255) [not null]
  date_of_birth date
  relationship_to_tenant varchar(100)
  is_contract_holder boolean [default: false]
}

Table person_alert_code {
  person_alert_code_id integer [pk, increment]
  code varchar(50) [not null, unique]
  name varchar(255) [not null]
  description text
}

